Создание секции с техникой

--- a/index.html
+++ b/index.html
@@ -60,10 +60,7 @@
                             <p class="benefits__title">Работаем по договору</p>
                         </li>
                     </ul>
-                    <div class="btn-request btn-request_mt" role="button">
-                        <p class="btn-request__title">Связаться с нами</p>
-                        <div class="btn-request__arrow"></div>
-                    </div>
+                    <button class="btn-request btn-request_mt">Связаться с нами</button>
                 </div>
                 <div class="swiper">
                     <div class="swiper-wrapper">
@@ -84,37 +81,118 @@
                 </div>
             </div>
             <ul class="conditions conditions_mt">
-                    <li class="conditions__item">
-                        <div class="conditions__wrap-icon">
-                            <div class="conditions__icon"></div>
-                            <div class="conditions__icon-bg"></div>
-                        </div>
-                        <p class="conditions__text">Гибкое расписание, аренда день в день или к назначенному времени</p>
-                    </li>
-                    <li class="conditions__item">
-                        <div class="conditions__wrap-icon">
-                            <div class="conditions__icon conditions__icon-2"></div>
-                            <div class="conditions__icon-bg"></div>
-                        </div>
-                        <p class="conditions__text">Аренда техники от 1 часа</p>
-                    </li>
-                    <li class="conditions__item">
-                        <div class="conditions__wrap-icon">
-                            <div class="conditions__icon conditions__icon-3"></div>
-                            <div class="conditions__icon-bg"></div>
-                        </div>
-                        <p class="conditions__text">Наличный и безналичный расчет</p>
-                    </li>
-                    <li class="conditions__item">
-                        <div class="conditions__wrap-icon">
-                            <div class="conditions__icon conditions__icon-4"></div>
-                            <div class="conditions__icon-bg"></div>
-                        </div>
-                        <p class="conditions__text">Работаем с физлицами и юрлицами</p>
-                    </li>
+                <li class="conditions__item">
+                    <div class="conditions__wrap-icon">
+                        <div class="conditions__icon"></div>
+                        <div class="conditions__icon-bg"></div>
+                    </div>
+                    <p class="conditions__text">Гибкое расписание, аренда день в день или к назначенному времени</p>
+                </li>
+                <li class="conditions__item">
+                    <div class="conditions__wrap-icon">
+                        <div class="conditions__icon conditions__icon-2"></div>
+                        <div class="conditions__icon-bg"></div>
+                    </div>
+                    <p class="conditions__text">Аренда техники от 1 часа</p>
+                </li>
+                <li class="conditions__item">
+                    <div class="conditions__wrap-icon">
+                        <div class="conditions__icon conditions__icon-3"></div>
+                        <div class="conditions__icon-bg"></div>
+                    </div>
+                    <p class="conditions__text">Наличный и безналичный расчет</p>
+                </li>
+                <li class="conditions__item">
+                    <div class="conditions__wrap-icon">
+                        <div class="conditions__icon conditions__icon-4"></div>
+                        <div class="conditions__icon-bg"></div>
+                    </div>
+                    <p class="conditions__text">Работаем с физлицами и юрлицами</p>
+                </li>
             </ul>
         </div>
     </header>
+    <main class="main">
+        <section class="technique">
+            <div class="container">
+                <h1 class="section-title section-title_mt">Наша техника</h1>
+                <ul class="car-list">
+                    <li class="car-list__item">
+                        <div class="car-list__card">
+                            <div class="car-list__img">
+                                <a class="car-list__info" href="#"></a>
+                                <img src="img/img-car-list-1.jpg">
+                            </div>
+                            <p class="car-list__type">Экскаваторная техника</p>
+                            <h2 class="car-list__title">Полноповоротный колёсный экскаватор DOOSAN DX210W</h2>
+                            <p class="car-list__text">Рытье траншей, котлована, планировка участка, перемещение грузов</p>
+                            <button class="btn-request car-list__btn">Оставить заявку</button>
+                        </div>
+                    </li>
+                    <li class="car-list__item">
+                        <div class="car-list__card">
+                            <div class="car-list__img">
+                                <a class="car-list__info" href="#"></a>
+                                <img src="img/img-car-list-2.png">
+                            </div>
+                            <p class="car-list__type">Экскаваторная техника</p>
+                            <h2 class="car-list__title">Экскаватор-погрузчик 4CX и JCB 5CX</h2>
+                            <p class="car-list__text">Рытье траншей, котлована, планировка участка, перемещение грузов</p>
+                            <button class="btn-request car-list__btn">Оставить заявку</button>
+                        </div>
+                    </li>
+                    <li class="car-list__item">
+                        <div class="car-list__card">
+                            <div class="car-list__img">
+                                <a class="car-list__info" href="#"></a>
+                                <img src="img/img-car-list-3.jpg">
+                            </div>
+                            <p class="car-list__type">Экскаваторная техника</p>
+                            <h2 class="car-list__title">Мини-экскаватор JCB 8030 ZTS</h2>
+                            <p class="car-list__text">Рытье траншей, котлована, работа с гидробуром</p>
+                            <button class="btn-request car-list__btn">Оставить заявку</button>
+                        </div>
+                    </li>
+                    <li class="car-list__item">
+                        <div class="car-list__card">
+                            <div class="car-list__img">
+                                <a class="car-list__info" href="#"></a>
+                                <img src="img//img-car-list-4.jpg">
+                            </div>
+                            <p class="car-list__type">Автосамосвал</p>
+                            <h2 class="car-list__title">Самосвал МАЗ</h2>
+                            <p class="car-list__text">Перевозка навалочных и сыпных грузов</p>
+                            <button class="btn-request car-list__btn">Оставить заявку</button>
+                        </div>
+                    </li>
+                    <li class="car-list__item">
+                        <div class="car-list__card">
+                            <div class="car-list__img">
+                                <a class="car-list__info" href="#"></a>
+                                <img src="img//img-car-list-5.png">
+                            </div>
+                            <p class="car-list__type">Виброкатки</p>
+                            <h2 class="car-list__title">Виброкаток Changlin</h2>
+                            <p class="car-list__text">Утрамбовка определенных отсыпанных слоев грунта</p>
+                            <button class="btn-request car-list__btn">Оставить заявку</button>
+                        </div>
+                    </li>
+                    <li class="car-list__item">
+                        <div class="car-list__card">
+                            <div class="car-list__img">
+                                <a class="car-list__info" href="#"></a>
+                                <img src="img//img-car-list-6.jpg">
+                            </div>
+                            <p class="car-list__type">Прицепная техника</p>
+                            <h2 class="car-list__title">Трал для перевозки спецтехники</h2>
+                            <p class="car-list__text">Перевозка строительной техники</p>
+                            <button class="btn-request car-list__btn">Оставить заявку</button>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
+    </main>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="script/headerSlider.js"></script>
 </body>
