Создание секции с дополнительным оборудованием

--- a/index.html
+++ b/index.html
@@ -192,6 +192,49 @@
                 </ul>
             </div>
         </section>
+        <section class="equipment">
+            <div class="container">
+                <h1 class="section-title section-title_mt">Дополнительное оборудование</h1>
+                <ul class="car-list">
+                    <li class="car-list__item">
+                        <div class="car-list__card">
+                            <div class="car-list__img">
+                                <a class="car-list__info" href="#"></a>
+                                <img src="img/img-equipment-list-1.jpg">
+                            </div>
+                            <p class="car-list__type">Строительное оборудование</p>
+                            <h2 class="car-list__title">Гидробур</h2>
+                            <p class="car-list__text">Рытье траншей, котлована, планировка участка, перемещение грузов</p>
+                            <button class="btn-request car-list__btn">Оставить заявку</button>
+                        </div>
+                    </li>
+                    <li class="car-list__item">
+                        <div class="car-list__card">
+                            <div class="car-list__img">
+                                <a class="car-list__info" href="#"></a>
+                                <img src="img/img-equipment-list-2.jpg">
+                            </div>
+                            <p class="car-list__type">Строительное оборудование</p>
+                            <h2 class="car-list__title">Гидромолот</h2>
+                            <p class="car-list__text">Рытье траншей, котлована, планировка участка, перемещение грузов</p>
+                            <button class="btn-request car-list__btn">Оставить заявку</button>
+                        </div>
+                    </li>
+                    <li class="car-list__item">
+                        <div class="car-list__card">
+                            <div class="car-list__img">
+                                <a class="car-list__info" href="#"></a>
+                                <img src="img/img-equipment-list-3.jpg">
+                            </div>
+                            <p class="car-list__type">Строительное оборудование</p>
+                            <h2 class="car-list__title">Сменные ковши под разные задачи</h2>
+                            <p class="car-list__text">СМЕННЫЕ КОВШИ ПОД РАЗНЫЕ ЗАДАЧИ</p>
+                            <button class="btn-request car-list__btn">Оставить заявку</button>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="script/headerSlider.js"></script>
