Создание секции со списком услуг : написание скрипта для графического представления каждой услуги

--- a/index.html
+++ b/index.html
@@ -235,7 +235,101 @@
                 </ul>
             </div>
         </section>
+        <section class="service">
+            <div class="container">
+                <h1 class="section-title section-title_mt">Список услуг нашей компании</h1>
+                <div class="service-grid">
+                    <div class="service-grid__path">
+                        <div class="service-grid__circle"></div>
+                        <div class="service-grid__line">
+                            <div class="service-grid__subline"></div>
+                        </div>
+                    </div>
+                    <div class="service-grid__content">
+                        <header class="service-grid__header">
+                            <h2 class="service-grid__title">Вывоз строительного мусора</h2>
+                            <p class="service-grid__subtitle">Утилизация мусора любого обЪема</p>
+                        </header>
+                        <p class="service-grid__text">Строительство, реконструкция или ремонт часто приводят к образованию большого количества строительного мусора, который необходимо утилизировать. Этот процесс является важным и завершающим этапом любого строительного проекта.</p>
+                        <p class="service-grid__text">Мы предлагаем нашу помощь в этом сложном задании, предоставляя услуги по вывозу мусора с использованием собственной спецтехники.</p>
+                        <p class="service-grid__text">Обратившись к нам за услугами по вывозу строительного мусора, вы получаете комплексное решение по выгодной цене и в удобное для вас время.</p>
+                        <p class="service-grid__text">Сотрудничая с нами, вы можете быть уверены в высоком качестве выполненной работы, при этом экономя время и средства</p>
+                    </div>
+                    <div class="service-grid__path">
+                        <div class="service-grid__circle service-grid__circle-2"></div>
+                        <div class="service-grid__line">
+                            <div class="service-grid__subline"></div>
+                        </div>
+                    </div>
+                    <div class="service-grid__content">
+                        <header class="service-grid__header">
+                            <h2 class="service-grid__title">Доставка песка</h2>
+                            <p class="service-grid__subtitle">Обеспечение быстрой доставки песка</p>
+                        </header>
+                        <p class="service-grid__text">Мы обеспечиваем быструю доставку песка любых объемов, от малых до крупных партий.</p>
+                        <p class="service-grid__text">Доставка песка от нашей компании — это удобная и надежная услуга для строительных и ландшафтных проектов.</p>
+                        <p class="service-grid__text">Современная техника для загрузки и транспортировки гарантирует эффективность и безопасность поставок, а гибкое расписание доставок позволяет клиентам точно планировать свои работы.</p>
+                    </div>
+                    <div class="service-grid__path">
+                        <div class="service-grid__circle service-grid__circle-3"></div>
+                        <div class="service-grid__line">
+                            <div class="service-grid__subline"></div>
+                        </div>
+                    </div>
+                    <div class="service-grid__content">
+                        <header class="service-grid__header">
+                            <div class="service-grid__img">
+                            </div>
+                            <div class="service-grid__title-content">
+                                <h2 class="service-grid__title">Доставка грунта</h2>
+                                <p class="service-grid__subtitle">Обеспечение быстрого ввоза и вывоза грунта</p>
+                            </div>
+                        </header>
+                        <p class="service-grid__text">Доставка и вывоз грунта от нашей компании — это комплексная услуга, предназначенная для облегчения строительных и земляных работ.</p>
+                        <p class="service-grid__text">Мы предоставляем транспортировку различных типов грунта, от плодородного слоя до строительного, а также вывозим излишки грунта с объектов строительства и ландшафтного дизайна.</p>
+                        <p class="service-grid__text">Наша техника, включая специализированные самосвалы, обеспечивает эффективную загрузку и транспортировку, гарантируя своевременное выполнение работ с учетом индивидуальных требований каждого проекта.</p>
+                    </div>
+                    <div class="service-grid__path">
+                        <div class="service-grid__circle service-grid__circle-4"></div>
+                        <div class="service-grid__line">
+                            <div class="service-grid__subline"></div>
+                        </div>
+                    </div>
+                    <div class="service-grid__content">
+                        <header class="service-grid__header">
+                            <h2 class="service-grid__title">Прокладка водопровода и канализации</h2>
+                            <p class="service-grid__subtitle">Создание надежных и эффективных систем водоснабжения и канализации</p>
+                        </header>
+                        <p class="service-grid__text">Прокладка водопровода и канализации — это одна из ключевых услуг нашей компании, предназначенная для создания надежных и эффективных систем водоснабжения и канализации.</p>
+                        <p class="service-grid__text">Мы используем современное оборудование и технику для выполнения земляных работ, обеспечивая точную и аккуратную прокладку труб.</p>
+                        <p class="service-grid__text">Мы гарантируем качество выполнения работ, соблюдение всех технических норм и стандартов, а также предоставляем гарантию на выполненные работы.</p>
+                    </div>
+                    <div class="service-grid__path">
+                        <div class="service-grid__circle service-grid__circle-5"></div>
+                        <div class="service-grid__line">
+                            <div class="service-grid__subline"></div>
+                        </div>
+                    </div>
+                    <div class="service-grid__content">
+                        <header class="service-grid__header">
+                            <h2 class="service-grid__title">Копка озер и создание водоемов различного назначения</h2>
+                            <p class="service-grid__subtitle">Реализация проектов водоемов любого размера и назначения</p>
+                        </header>
+                        <p class="service-grid__text">Наши услуги по копке озер и созданию водоемов предлагают всестороннее решение для реализации проектов водоемов любого размера и назначения.</p>
+                        <p class="service-grid__text">Мы обеспечиваем полный цикл работ — от первоначальной консультации до окончательного формирования водоема, используя современное оборудование и опыт команды.</p>
+                        <p class="service-grid__text">Наши специалисты помогут вам создать как небольшие декоративные пруды, так и крупные озера, при этом соблюдая экологические нормы и стандарты безопасности, чтобы обеспечить долговечность и красоту ваших водоемов.</p>
+                    </div>
+                    <div class="service-grid__path">
+                        <div class="service-grid__circle service-grid__circle-6"></div>
+                        <div class="service-grid__line">
+                            <div class="service-grid__subline"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="script/headerSlider.js"></script>
+    <script src="script/serviceLine.js"></script>
 </body>
