Создание секции с планом : анимация на js, мобильная адаптация

--- a/index.html
+++ b/index.html
@@ -328,8 +328,141 @@
                 </div>
             </div>
         </section>
+        <section class="plan">
+            <div class="container">
+                <h1 class="section-title section-title_mt">План нашей работы</h1>
+                <div class="plan-grid">
+                    <div class="plan-grid__step plan-grid__step-1">
+                        <div class="plan-grid__step-bg"></div>
+                        <div class="plan-grid__icon-block">
+                            <div class="plan-grid__icon"></div>
+                            <p class="plan-grid__num">01</p>
+                        </div>
+                        <div class="plan-grid__content">
+                            <h2 class="plan-grid__title">Обращение в нашу команду</h2>
+                            <p class="plan-grid__text">Вы можете позвонить нам по телефонам +375 (29) 553-77-12 или +375 (33) 552-77-12, оставить заявку на сайте, а также написать на почту kolyankovsh@mail.ru</p>
+                        </div>
+                    </div>
+                    <div class="plan-grid__path plan-grid__path-1">
+                        <div class="plan-grid__line"></div>
+                    </div>
+                    <div class="plan-grid__step plan-grid__step-2">
+                        <div class="plan-grid__step-bg"></div>
+                        <div class="plan-grid__icon-block">
+                            <div class="plan-grid__icon plan-grid__icon-2"></div>
+                            <p class="plan-grid__num">02</p>
+                        </div>
+                        <div class="plan-grid__content">
+                            <h2 class="plan-grid__title">Предварительная оценка</h2>
+                            <p class="plan-grid__text">Мы отправляем специалиста на объект для оценки объема работ и предварительного расчета стоимости.</p>
+                            <p class="plan-grid__text">Это позволяет точно понять потребности клиента и предотвратить дополнительные расходы</p>
+                        </div>
+                    </div>
+                    <div class="hollow-div-md"></div>
+                    <div class="hollow-div-md"></div>
+                    <div class="plan-grid__path plan-grid__path-2">
+                        <div class="plan-grid__line"></div>
+                    </div>
+                    <div class="plan-grid__step plan-grid__step-4-md">
+                        <div class="plan-grid__step-bg"></div>
+                        <div class="plan-grid__icon-block">
+                            <div class="plan-grid__icon plan-grid__icon-4"></div>
+                            <p class="plan-grid__num">04</p>
+                        </div>
+                        <div class="plan-grid__content">
+                            <h2 class="plan-grid__title">Подготовка и доставка техникиу</h2>
+                            <p class="plan-grid__text">На основе подписанного договора мы подготавливаем необходимую спецтехнику и организуем ее доставку на объект в установленные сроки</p>
+                        </div>
+                    </div>
+                    <div class="plan-grid__step plan-grid__step-3">
+                        <div class="plan-grid__step-bg"></div>
+                        <div class="plan-grid__icon-block">
+                            <div class="plan-grid__icon plan-grid__icon-3"></div>
+                            <p class="plan-grid__num">03</p>
+                        </div>
+                        <div class="plan-grid__content">
+                            <h2 class="plan-grid__title">Составление и подписание договора</h2>
+                            <p class="plan-grid__text">После утверждения предварительной оценки составляется и подписывается договор, в котором прописываются сроки, объемы работ и стоимость услуг</p>
+                        </div>
+                    </div>
+                    <div class="hollow-div-lg"></div>
+                    <div class="hollow-div-lg"></div>
+                    <div class="hollow-div-lg"></div>
+                    <div class="hollow-div-lg"></div>
+                    <div class="plan-grid__path plan-grid__path-3">
+                        <div class="plan-grid__line plan-grid__line_transform-bottom-lg"></div>
+                    </div>
+                    <div class="plan-grid__step plan-grid__step-6">
+                        <div class="plan-grid__step-bg"></div>
+                        <div class="plan-grid__icon-block">
+                            <div class="plan-grid__icon plan-grid__icon-6"></div>
+                            <p class="plan-grid__num">06</p>
+                        </div>
+                        <div class="plan-grid__content">
+                            <h2 class="plan-grid__title">Постпродажное обслуживание</h2>
+                            <p class="plan-grid__text">По окончанию работ производится их приемка клиентом.</p>
+                            <p class="plan-grid__text">Мы предоставляем гарантии на выполненные работы и остаемся на связи для последующей поддержки или консультаций</p>
+                        </div>
+                    </div>
+                    <div class="plan-grid__step plan-grid__step-3-md">
+                        <div class="plan-grid__step-bg"></div>
+                        <div class="plan-grid__icon-block">
+                            <div class="plan-grid__icon plan-grid__icon-3"></div>
+                            <p class="plan-grid__num">03</p>
+                        </div>
+                        <div class="plan-grid__content">
+                            <h2 class="plan-grid__title">Составление и подписание договора</h2>
+                            <p class="plan-grid__text">После утверждения предварительной оценки составляется и подписывается договор, в котором прописываются сроки, объемы работ и стоимость услуг</p>
+                        </div>
+                    </div>
+                    <div class="plan-grid__path plan-grid__path-4">
+                        <div class="plan-grid__line plan-grid__line_transform-left-lg"></div>
+                    </div>
+                    <div class="hollow-div-md"></div>
+                    <div class="hollow-div-md"></div>
+                    <div class="plan-grid__step plan-grid__step-5">
+                        <div class="plan-grid__step-bg"></div>
+                        <div class="plan-grid__icon-block">
+                            <div class="plan-grid__icon plan-grid__icon-5"></div>
+                            <p class="plan-grid__num">05</p>
+                        </div>
+                        <div class="plan-grid__content">
+                            <h2 class="plan-grid__title">Выполнение работ</h2>
+                            <p class="plan-grid__text">Наши квалифицированные машинисты выполняют работы согласно техническому заданию, обеспечивая высокое качество и соблюдение всех норм безопасности</p>
+                        </div>
+                    </div>
+                    <div class="plan-grid__path plan-grid__path-5">
+                        <div class="plan-grid__line plan-grid__line_transform-left-lg"></div>
+                    </div>
+                    <div class="plan-grid__step plan-grid__step-6-md">
+                        <div class="plan-grid__step-bg"></div>
+                        <div class="plan-grid__icon-block">
+                            <div class="plan-grid__icon plan-grid__icon-6"></div>
+                            <p class="plan-grid__num">06</p>
+                        </div>
+                        <div class="plan-grid__content">
+                            <h2 class="plan-grid__title">Постпродажное обслуживание</h2>
+                            <p class="plan-grid__text">По окончанию работ производится их приемка клиентом.</p>
+                            <p class="plan-grid__text">Мы предоставляем гарантии на выполненные работы и остаемся на связи для последующей поддержки или консультаций</p>
+                        </div>
+                    </div>
+                    <div class="plan-grid__step plan-grid__step-4">
+                        <div class="plan-grid__step-bg"></div>
+                        <div class="plan-grid__icon-block">
+                            <div class="plan-grid__icon plan-grid__icon-4"></div>
+                            <p class="plan-grid__num">04</p>
+                        </div>
+                        <div class="plan-grid__content">
+                            <h2 class="plan-grid__title">Подготовка и доставка техникиу</h2>
+                            <p class="plan-grid__text">На основе подписанного договора мы подготавливаем необходимую спецтехнику и организуем ее доставку на объект в установленные сроки</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="script/headerSlider.js"></script>
     <script src="script/serviceLine.js"></script>
+    <script src="script/planArrows.js"></script>
 </body>
