Создание секции с обратной связью

--- a/index.html
+++ b/index.html
@@ -460,6 +460,22 @@
                 </div>
             </div>
         </section>
+        <section class="feedback">
+            <div class="container container_sm">
+                <div class="wrap-feedback">
+                    <div class="wrap-feedback__content">
+                        <h2 class="wrap-feedback__title">Есть вопросы по графику или работе нашей компании?</h2>
+                        <h2 class="wrap-feedback__title wrap-feedback__title-2">Не знаете, какая техника вам подойдет?</h2>
+                        <p class="wrap-feedback__text">Тогда вы можете оставить ваши контакты на сайте,  мы свяжемся с вами в ближайшее время и решим все проблемы</p>
+                        <p class="wrap-feedback__text">Ответим на любые вопросы</p>
+                        <button class="btn-request wrap-feedback__btn">Связаться с нами</button>
+                    </div>
+                    <div class="wrap-feedback__img">
+                        <img src="img/img-feedback.jpg">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="script/headerSlider.js"></script>
