Написание фунционала скрытия и появления скролла

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+    <div class="overblock"></div>
     <form class="popup" id="btn-request-main">
         <header class="popup__head">
             <h3 class="popup__title-head">Обратная связь</h3>
@@ -679,5 +680,6 @@
     <script src="script/planArrows.js"></script>
     <script src="script/accordion.js"></script>
     <script src="script/formAppearAndHide.js"></script>
+    <script src="script/closeAndOpenScroll.js"></script>
     <script src="script/radio.js"></script>
 </body>
