--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                             <p class="benefits__title">Работаем по договору</p>
                         </li>
                     </ul>
-                    <button class="btn-request btn-request_mt" data-request="#btn-request-main">Связаться с нами</button>
+                    <button class="btn-request btn-request_mt btn-popup" data-request="#btn-request-main">Связаться с нами</button>
                 </div>
                 <div class="swiper">
                     <div class="swiper-wrapper">
